deployment/kubernetes/main-ingress/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      traefik.ingress.kubernetes.io/router.middlewares: dev-https-redirect@kubernetescrd
  name: main-ingress
  labels:
    name: main-ingress
spec:
  tls:
  - hosts:
    - "tenzing.shkhr.ovh"
    - "*.tenzing.shkhr.ovh"
    secretName: tenzing-dev-cert-tls
  defaultBackend:
    service:
      name: heimdall
      port:
        number: 80
  rules:
  - host: tenzing.shkhr.ovh
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall
            port: 
              number: 80
  - host: homeassistant.tenzing.shkhr.ovh
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: home-assistant
            port: 
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: dev
spec:
  redirectScheme:
    scheme: https
    permanent: true
